Add example notes

--- a/app/views/notes.html
+++ b/app/views/notes.html
@@ -1,1 +1,5 @@
-<p>This is the notes view.</p>
+<div class="workspace">
+  <div class="note md-whiteframe-z1" ng-style="style(note)" ng-repeat="note in notes">
+    {{note.text}}
+  </div>
+</div>
