--- a/app/views/add.html
+++ b/app/views/add.html
@@ -11,9 +11,9 @@
   <md-checkbox ng-model="note.date" aria-label="Due date">
     Due date
   </md-checkbox>
-  <md-text-float label="Due date" type="date" ng-model="note.dateValue" ng-disabled="{{!note.date}}"></md-text-float>
+  <md-text-float label="Due date" type="date" ng-model="note.dateValue"></md-text-float>
 
-  <md-button ng-click="add(note)" class="md-raised md-primary">Add</md-button>
-  <md-button ng-click="reset(note)" class="md-raised">Reset</md-button>
-  <md-button ng-click="cancel()" class="md-raised md-warn">Cancel</md-button>
+  <md-button ng-click="add(note)" class="md-raised md-primary" aria-label="Add">Add</md-button>
+  <md-button ng-click="reset(note)" class="md-raised" aria-label="Reset">Reset</md-button>
+  <md-button ng-click="cancel()" class="md-raised md-warn" aria-label="Cancel">Cancel</md-button>
 </form>
