--- a/app/views/notes.html
+++ b/app/views/notes.html
@@ -1,5 +1,6 @@
 <div class="workspace">
   <div class="note md-whiteframe-z1" ng-style="style(note)" ng-repeat="note in notes">
-    {{note.text}}
+    <h3>{{note.title}}</h3>
+    {{note.description}}
   </div>
 </div>
