--- a/app/views/notes.html
+++ b/app/views/notes.html
@@ -1,8 +1,13 @@
 <div class="workspace">
   <div class="board">
-    <div  drag class="note md-whiteframe-z1"  ng-style="style()" ng-repeat="note in notes" >
+    <div drag class="note"
+        on-drag="drag(note)" on-drop="drop(note)"
+        ng-style="style()" ng-class="{'md-whiteframe-z1': !note._dragged, 'md-whiteframe-z2': note._dragged}"
+        ng-repeat="note in notes">
       <h3>{{note.title}}</h3>
       {{note.description}}
+
+      <small>[{{note.position.x}}, {{note.position.y}}]</small>
     </div>
   </div>
 </div>
