--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,6 +1,11 @@
+md-toolbar {
+  z-index: 100;
+}
+
 .workspace {
   height: 300px;
   position: relative;
+  background-color: rgba(232, 216, 181, 0.55);
 }
 
 .note {
@@ -12,8 +17,10 @@
   width: 250px;
 }
 
-.board{
-  background-color: rgba(232, 216, 181, 0.55);
-  height:800px;
-  width:1000px;
+.md-whiteframe-z1 {
+  z-index: 10;
+}
+
+.md-whiteframe-z2 {
+  z-index: 20;
 }
