--- a/app/views/notes.html
+++ b/app/views/notes.html
@@ -9,5 +9,6 @@
     <br/>
     <small>[{{note.position.x}}, {{note.position.y}}]</small>
     <button ng-click="remove(notes, note)">Remove</button>
+    <a ng-href="#/edit/{{$index}}"> <button >Edit</button></a>
   </div>
 </div>
