--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -11,7 +11,7 @@ md-toolbar {
 .note {
   background-color: #fff;
   display: block;
-  min-height: 50px;
+  height: 150px;
   padding: 10px;
   position: absolute;
   width: 250px;
