--- a/app/views/notes.html
+++ b/app/views/notes.html
@@ -2,7 +2,8 @@
   {{boardSize}}
   <div drag class="note"
       on-drag="drag(note)" on-move="move(note, deltaX, deltaY, boardSize)" on-drop="drop(note)"
-      ng-style="style(note)" ng-class="{'md-whiteframe-z1': !note._dragged, 'md-whiteframe-z2': note._dragged}"
+      ng-style="style(note)"
+      ng-class="{'md-whiteframe-z1': !note._dragged, 'md-whiteframe-z2': note._dragged, '{{note.color}}': true}"
       ng-repeat="note in notes">
     <h3>{{note.title}}</h3>
     {{note.description}}
