--- a/app/views/board.html
+++ b/app/views/board.html
@@ -1,5 +1,4 @@
 <div class="workspace" sn-dimensions="boardSize">
-  {{boardSize}}
   <div drag class="note"
       sn-dimensions="note._dimensions"
       on-drag="drag(note)" on-move="move(note, deltaX, deltaY, boardSize)" on-drop="drop(note)"
@@ -9,14 +8,11 @@
     <h3>{{note.title}}</h3>
     {{note.description}}
 
-    <br/>
-    <small>[{{note._dimensions.x}}, {{note._dimensions.y}}]</small>
-    <small>[{{note.position.x}}, {{note.position.y}}]</small>
-    <md-button ng-click="remove(notes, note)">
-      <md-icon icon="/images/clear5.svg">Remove</md-icon>
-    </md-button>
-    <md-button ng-href="#/edit/{{$index}}">
+    <md-button class="edit" ng-href="#/edit/{{$index}}">
       <md-icon icon="/images/create3.svg">Edit</md-icon>
+    </md-button>
+    <md-button class="remove" ng-click="remove(notes, note)">
+      <md-icon icon="/images/clear5.svg">Remove</md-icon>
     </md-button>
   </div>
 </div>
