fix board height at chrome
Closes #22

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -10,11 +10,13 @@ html, body {
 }
 
 [ng-view] {
+  display: flex;
   flex-grow: 1;
 }
 
 .workspace {
   min-height: 100%;
+  flex-grow: 1;
 }
 
 /* layout */
