Replace image paths with relative ones
Fixes #16

--- a/app/views/board.html
+++ b/app/views/board.html
@@ -8,10 +8,10 @@
     <h3>{{note.title}}</h3>
     {{note.description}}
     <md-button class="edit" ng-href="#/edit/{{$index}}" aria-label="Edit note {{$index}}">
-      <md-icon icon="/images/create3.svg">Edit</md-icon>
+      <md-icon icon="./images/create3.svg">Edit</md-icon>
     </md-button>
     <md-button class="remove" ng-click="remove(notes, note)" aria-label="Remove note {{$index}}">
-      <md-icon icon="/images/clear5.svg">Remove</md-icon>
+      <md-icon icon="./images/clear5.svg">Remove</md-icon>
     </md-button>
   </div>
 </div>
