needs some tests

--- a/app/views/board.html
+++ b/app/views/board.html
@@ -13,5 +13,8 @@
     <md-button class="remove" ng-click="remove(notes, note)" aria-label="Remove note {{$index}}">
       <md-icon icon="./images/clear5.svg">Remove</md-icon>
     </md-button>
+    <md-button class="archive" ng-click="archive(notes, note)" aria-label="Archive note {{$index}}">
+      <md-icon icon="./images/done.svg">Done</md-icon>
+    </md-button>
   </div>
 </div>
