--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -124,3 +124,14 @@ md-bottom-sheet {
 md-backdrop {
   z-index: 35;
 }
+
+.note-preview {
+    width:50px;
+    height: 50px;
+    margin:5px;
+}
+
+.logo{
+    color: white;
+    text-decoration: none;
+}
