--- a/app/views/settings.html
+++ b/app/views/settings.html
@@ -12,5 +12,11 @@
         Exit settings
       </md-button>
     </md-item>
+    <md-item>
+      <md-button ng-click="authors($event)" aria-label="Authors">
+        <md-inline-grid-icon icon="./images/ic_arrow_back_24px.svg"></md-inline-grid-icon>
+        Authors
+      </md-button>
+    </md-item>
   </md-list>
 </md-bottom-sheet>
