--- a/app/views/authors.html
+++ b/app/views/authors.html
@@ -1,12 +1,16 @@
-<md-dialog aria-label=Authors"  class="authors-dialog">
+<md-dialog aria-label=Authors" class="authors-dialog">
   <md-content>
     <md-subheader class="md-sticky-no-effect authors">Authors</md-subheader>
 
     <section layout="row " layout-sm="column">
       <div class="person">
-        <span><md-button class="md-fab marcin" aria-label="Time">
-          <md-icon  style="width: 24px; height: 24px;"></md-icon>
-        </md-button></span>
+        <span>
+          <a href="https://github.com/marcin-wosinek" target="_blank">
+            <md-button class="md-fab marcin" aria-label="Time">
+              <md-icon  style="width: 24px; height: 24px;"></md-icon>
+            </md-button>
+          </a>
+        </span>
         <span class="name">
            Marcin Wosinek<br>marcin.wosinek@gmail.com
         </span>
@@ -15,9 +19,13 @@
 
     <section layout="row " layout-sm="column">
       <div class="person">
-        <span><md-button class="md-fab grzesiek" aria-label="Time">
-          <md-icon style="width: 24px; height: 24px;"></md-icon>
-        </md-button></span>
+        <span>
+          <a href="https://github.com/grzim" target="_blank">
+           <md-button class="md-fab grzesiek" aria-label="Time">
+            <md-icon style="width: 24px; height: 24px;"></md-icon>
+           </md-button>
+          </a>
+        </span>
         <span class="name">
            Grzegorz Marzencki<br>gm@pureepic.eu
         </span>
