--- a/app/views/settings.html
+++ b/app/views/settings.html
@@ -1,9 +1,9 @@
 <md-bottom-sheet class="md-grid">
   <md-list>
     <md-item>
-      <md-button ng-click="cleanBoard()" aria-label="Clean board">
+      <md-button ng-click="archiveAll()" aria-label="Archive all">
         <md-inline-grid-icon icon="./images/ic_delete_24px.svg"></md-inline-grid-icon>
-        Clean board
+        Archive all
       </md-button>
     </md-item>
     <md-item>
