--- a/app/views/list.html
+++ b/app/views/list.html
@@ -73,7 +73,7 @@
         </md-list>
       </section>
       <section>
-      <!--  <md-subheader class="md-warn">Archived earlier</md-subheader>
+      <md-subheader class="md-warn">Archived earlier</md-subheader>
         <md-list layout="column">
           <md-item ng-repeat="message in archived | earlier">
             <md-item-content>
@@ -88,6 +88,6 @@
               </div>
             </md-item-content>
           </md-item>
-        </md-list>-->
+        </md-list>
       </section>
 </div>
