--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -136,8 +136,9 @@ md-backdrop {
     text-decoration: none;
 }
 
-.md-dialog-container.md-active{
+.md-dialog-container.md-active md-dialog{
   z-index:100;
+  opacity:1;
 }
 
 .authors-dialog section{
@@ -163,3 +164,5 @@ md-backdrop {
   background-image:url(../images/grzesiek.png);
   background-size: cover;
 }
+
+
