--- a/app/views/authors.html
+++ b/app/views/authors.html
@@ -3,10 +3,10 @@
     <md-subheader class="md-sticky-no-effect authors">Authors</md-subheader>
 
     <section layout="row " layout-sm="column">
-      <div class="person">
+      <div class="person marcin">
         <span>
           <a href="https://github.com/marcin-wosinek" target="_blank">
-            <md-button class="md-fab marcin" aria-label="Time">
+            <md-button class="md-fab pic" aria-label="Time">
               <md-icon  style="width: 24px; height: 24px;"></md-icon>
             </md-button>
           </a>
@@ -18,10 +18,10 @@
     </section>
 
     <section layout="row " layout-sm="column">
-      <div class="person">
+      <div class="person grzesiek">
         <span>
           <a href="https://github.com/grzim" target="_blank">
-           <md-button class="md-fab grzesiek" aria-label="Time">
+           <md-button class="md-fab pic" aria-label="Time">
             <md-icon style="width: 24px; height: 24px;"></md-icon>
            </md-button>
           </a>
