--- a/app/views/board.html
+++ b/app/views/board.html
@@ -1,5 +1,8 @@
 <div class="workspace" sn-dimensions="boardSize">
-  <div drag class="note"
+    <section layout="row" layout-sm="column" >
+      <md-button ng-href="#/add" class="smart-button md-fab" aria-label="Add link" ng-if="route != 'add'"><md-icon icon="./images/add180.svg">Add</md-icon></md-button>
+    </section>
+    <div drag class="note"
       sn-dimensions="note._dimensions"
       on-drag="drag(note)" on-move="move(note, deltaX, deltaY, boardSize)" on-drop="drop(note)"
       ng-style="style(note)"
