--- a/app/views/authors.html
+++ b/app/views/authors.html
@@ -1,42 +1,26 @@
 <md-dialog aria-label=Authors" class="authors-dialog">
   <md-content>
-    <md-subheader class="md-sticky-no-effect authors">Authors</md-subheader>
+    <h2>Authors</h2>
 
-    <section layout="row " layout-sm="column">
-      <div class="person marcin">
-        <span>
-          <a href="https://github.com/marcin-wosinek" target="_blank">
-            <md-button class="md-fab pic" aria-label="Time">
-              <md-icon  style="width: 24px; height: 24px;"></md-icon>
-            </md-button>
-          </a>
-        </span>
-        <span class="name">
-           Marcin Wosinek<br>marcin.wosinek@gmail.com
-        </span>
-      </div>
-    </section>
-
-    <section layout="row " layout-sm="column">
-      <div class="person grzesiek">
-        <span>
-          <a href="https://github.com/grzim" target="_blank">
-           <md-button class="md-fab pic" aria-label="Time">
-            <md-icon style="width: 24px; height: 24px;"></md-icon>
-           </md-button>
-          </a>
-        </span>
-        <span class="name">
-           Grzegorz Marzencki<br>gm@pureepic.eu
-        </span>
-      </div>
-    </section>
+    <div class="person marcin">
+      <a href="https://github.com/marcin-wosinek" target="_blank">
+        <img src="./images/marcin.png" class="pic"/>
+      </a>
+      <strong>Marcin Wosinek</strong> <br />
+      <small>marcin.wosinek@gmail.com</small>
+    </div>
+    <hr>
+    <div class="person grzesiek">
+      <a href="https://github.com/grzim" target="_blank">
+        <img src="./images/grzesiek.png" class="pic"/>
+      </a>
+      <strong>Grzegorz Marzencki</strong><br />
+      <small>gm@pureepic.eu</small>
+    </div>
   </md-content>
 
 
   <div class="md-actions" layout="row">
-
-    <span flex></span>
     <md-button ng-click="hide()" class="md-primary">
       Hide
     </md-button>
