--- a/app/views/list.html
+++ b/app/views/list.html
@@ -1,5 +1,5 @@
 <div ng-controller="ListCtrl" layout="column" flex layout-fill>
-    <md-content style="height: 600px;">
+    <md-content>
         <section>
             <md-subheader class="md-primary">Current</md-subheader>
             <md-list layout="column">
