--- a/app/views/board.html
+++ b/app/views/board.html
@@ -11,13 +11,13 @@
       ng-repeat="note in notes">
     <h3>{{note.title}}</h3>
     {{note.description}}
-    <md-button class="edit" ng-href="#/edit/{{$index}}" aria-label="Edit note {{$index}}">
+    <md-button class="edit" ng-href="#/edit/{{$index}}" aria-label="Edit note {{$index}}" title="Edit">
       <md-icon icon="./images/create3.svg">Edit</md-icon>
     </md-button>
-    <md-button class="remove" ng-click="remove(notes, note)" aria-label="Remove note {{$index}}">
+    <md-button class="remove" ng-click="remove(notes, note)" aria-label="Remove note {{$index}}" title="Remove">
       <md-icon icon="./images/clear5.svg">Remove</md-icon>
     </md-button>
-    <md-button class="archive" ng-click="archive(notes, note)" aria-label="Archive note {{$index}}">
+    <md-button class="archive" ng-click="archive(notes, note)" aria-label="Archive note {{$index}}" title="Archive">
       <md-icon icon="./images/done.svg">Done</md-icon>
     </md-button>
   </div>
