--- a/app/views/board.html
+++ b/app/views/board.html
@@ -6,18 +6,18 @@
       sn-dimensions="note._dimensions"
       on-drag="drag(note)" on-move="move(note, deltaX, deltaY, boardSize)" on-drop="drop(note)"
       ng-style="style(note)"
-      ng-dblclick="noteDblclick($index)"
+      ng-dblclick="noteDblclick(note.id)"
       ng-class="{'md-whiteframe-z1': !note._dragged, 'md-whiteframe-z2': note._dragged, '{{note.color}}': true}"
       ng-repeat="note in notes">
     <h3>{{note.title}}</h3>
     {{note.description}}
-    <md-button class="edit" ng-href="#/edit/{{$index}}" aria-label="Edit note {{$index}}" title="Edit">
+    <md-button class="edit" ng-href="#/edit/{{note.id}}" aria-label="Edit note {{note.id}}" title="Edit">
       <md-icon icon="./images/create3.svg">Edit</md-icon>
     </md-button>
-    <md-button class="remove" ng-click="remove(notes, note)" aria-label="Remove note {{$index}}" title="Remove">
+    <md-button class="remove" ng-click="remove(notes, note)" aria-label="Remove note {{note.id}}" title="Remove">
       <md-icon icon="./images/clear5.svg">Remove</md-icon>
     </md-button>
-    <md-button class="archive" ng-click="archive(notes, note)" aria-label="Archive note {{$index}}" title="Archive">
+    <md-button class="archive" ng-click="archive(notes, note)" aria-label="Archive note {{note.id}}" title="Archive">
       <md-icon icon="./images/done.svg">Done</md-icon>
     </md-button>
   </div>
