--- a/app/views/list.html
+++ b/app/views/list.html
@@ -1,4 +1,4 @@
-<div ng-controller="ListCtrl" layout="column" flex layout-fill>
+<div layout="column" flex layout-fill>
     <md-content>
         <section>
             <md-subheader class="md-primary">Current</md-subheader>
