--- a/app/views/board.html
+++ b/app/views/board.html
@@ -1,6 +1,8 @@
 <div class="workspace" sn-dimensions="boardSize">
     <section layout="row" layout-sm="column" >
-      <md-button ng-href="#/add" class="smart-button md-fab" aria-label="Add link" ng-if="route != 'add'"><md-icon icon="./images/add180.svg">Add</md-icon></md-button>
+      <md-button ng-href="#/add" class="smart-button md-fab" aria-label="Add link" ng-if="route != 'add'">
+        <md-icon md-svg-icon="./images/add180.svg">Add</md-icon>
+      </md-button>
     </section>
     <div drag class="note"
       sn-dimensions="note._dimensions"
@@ -12,13 +14,13 @@
     <h3>{{note.title}}</h3>
     {{note.description}}
     <md-button class="edit" ng-href="#/edit/{{note.id}}" aria-label="Edit note {{note.id}}" title="Edit">
-      <md-icon icon="./images/create3.svg">Edit</md-icon>
+      <md-icon md-svg-icon="./images/create3.svg">Edit</md-icon>
     </md-button>
     <md-button class="remove" ng-click="remove(notes, note)" aria-label="Remove note {{note.id}}" title="Remove">
-      <md-icon icon="./images/clear5.svg">Remove</md-icon>
+      <md-icon md-svg-icon="./images/clear5.svg">Remove</md-icon>
     </md-button>
     <md-button class="archive" ng-click="archive(notes, note)" aria-label="Archive note {{note.id}}" title="Archive">
-      <md-icon icon="./images/done.svg">Done</md-icon>
+      <md-icon md-svg-icon="./images/done.svg">Done</md-icon>
     </md-button>
   </div>
 </div>
