--- a/app/views/settings.html
+++ b/app/views/settings.html
@@ -3,7 +3,7 @@
     <md-item>
       <md-button ng-click="archiveAll()" aria-label="Archive all">
         <div>
-          <md-icon icon="./images/ic_delete_24px.svg"></md-icon>
+          <md-icon md-svg-icon="./images/ic_delete_24px.svg"></md-icon>
         </div>
         Archive all
       </md-button>
@@ -11,7 +11,7 @@
     <md-item>
       <md-button ng-click="authors($event)" aria-label="Authors">
         <div>
-          <md-icon icon="./images/ic_group_24px.svg"></md-icon>
+          <md-icon md-svg-icon="./images/ic_group_24px.svg"></md-icon>
         </div>
         Authors
       </md-button>
@@ -19,7 +19,7 @@
     <md-item>
       <md-button ng-click="exitSettings()" aria-label="Exit settings">
         <div>
-          <md-icon icon="./images/ic_arrow_back_24px.svg"></md-icon>
+          <md-icon md-svg-icon="./images/ic_arrow_back_24px.svg"></md-icon>
         </div>
         Exit settings
       </md-button>
