add prefix to drag directive
close #66

--- a/app/views/board.html
+++ b/app/views/board.html
@@ -4,7 +4,7 @@
       <md-icon md-svg-icon="./images/add180.svg">Add</md-icon>
     </md-button>
   </section>
-  <div drag class="note"
+  <div sn-drag class="note"
       sn-dimensions="note._dimensions"
       on-drag="drag(note)" on-move="move(note, deltaX, deltaY, boardSize)" on-drop="drop(note)"
       ng-style="style(note)"
