switch emails to twitter

--- a/app/views/authors.html
+++ b/app/views/authors.html
@@ -6,16 +6,16 @@
       <a href="https://github.com/marcin-wosinek" target="_blank">
         <img src="./images/marcin.png" class="pic"/>
       </a>
-      <strong>Marcin Wosinek</strong> <br />
-      <small>marcin.wosinek@gmail.com</small>
+      <br>
+      <a href="https://twitter.com/MarcinWosine">@MarcinWosinek</a>
     </div>
     <hr>
     <div class="person grzesiek">
       <a href="https://github.com/grzim" target="_blank">
         <img src="./images/grzesiek.png" class="pic"/>
       </a>
-      <strong>Grzegorz Marzencki</strong><br />
-      <small>gm@pureepic.eu</small>
+      <br>
+      <a href="https://twitter.com/griszue">@griszue</a>
     </div>
   </md-content>
 
