--- a/app/views/list.html
+++ b/app/views/list.html
@@ -3,73 +3,25 @@
   <section>
     <md-subheader class="md-primary">Current</md-subheader>
     <md-list layout="column">
-      <md-item ng-repeat="note in notes">
-        <md-item-content>
-          <div class="md-tile-left md-whiteframe-z1 note-preview" ng-attr-style="background: rgb({{note.color.red}},{{note.color.green}},{{note.color.blue}})">
-          </div>
-          <div class="md-tile-content">
-            <h3>{{note.title}}</h3>
-            <h4>{{note.date}}</h4>
-            <p>
-              {{note.description}}
-            </p>
-          </div>
-        </md-item-content>
-      </md-item>
+      <md-item ng-repeat="note in notes" ng-include="'views/partials/list-element.html'"></md-item>
     </md-list>
   </section>
   <section>
     <md-subheader class="md-warn">Archived today</md-subheader>
     <md-list layout="column">
-      <md-item ng-repeat="note in archived | today: 'archivedDate'">
-        <md-item-content>
-          <div class="md-tile-left md-whiteframe-z1 note-preview" ng-attr-style="background: rgb({{note.color.red}},{{note.color.green}},{{note.color.blue}})">
-          </div>
-          <div class="md-tile-content">
-            <h3>{{note.title}}</h3>
-            <h4>{{note.date}}</h4>
-            <p>
-              {{note.description}}
-            </p>
-          </div>
-        </md-item-content>
-      </md-item>
+      <md-item ng-repeat="note in archived | today: 'archivedDate'" ng-include="'views/partials/list-element.html'"></md-item>
     </md-list>
   </section>
   <section>
     <md-subheader class="md-warn">Archived yesterday</md-subheader>
     <md-list layout="column">
-      <md-item ng-repeat="note in archived | yesterday: 'archivedDate'">
-        <md-item-content>
-          <div class="md-tile-left md-whiteframe-z1 note-preview" ng-attr-style="background: rgb({{note.color.red}},{{note.color.green}},{{note.color.blue}})">
-          </div>
-          <div class="md-tile-content">
-            <h3>{{note.title}}</h3>
-            <h4>{{note.date}}</h4>
-            <p>
-              {{note.description}}
-            </p>
-          </div>
-        </md-item-content>
-      </md-item>
+      <md-item ng-repeat="note in archived | yesterday: 'archivedDate'" ng-include="'views/partials/list-element.html'"></md-item>
     </md-list>
   </section>
   <section>
     <md-subheader class="md-warn">Archived earlier</md-subheader>
     <md-list layout="column">
-      <md-item ng-repeat="note in archived | earlier: 'archivedDate'">
-        <md-item-content>
-          <div class="md-tile-left md-whiteframe-z1 note-preview"ng-attr-style="background: rgb({{note.color.red}},{{note.color.green}},{{note.color.blue}})">
-          </div>
-          <div class="md-tile-content">
-            <h3>{{note.title}}</h3>
-            <h4>{{note.date}}</h4>
-            <p>
-              {{note.description}}
-            </p>
-          </div>
-        </md-item-content>
-      </md-item>
+      <md-item ng-repeat="note in archived | earlier: 'archivedDate'" ng-include="'views/partials/list-element.html'"></md-item>
     </md-list>
   </section>
 </div>
