--- a/app/views/list.html
+++ b/app/views/list.html
@@ -3,25 +3,25 @@
   <section>
     <md-subheader class="md-primary">Current</md-subheader>
     <md-list layout="column">
-      <md-item ng-repeat="note in notes" ng-include="'views/partials/list-element.html'"></md-item>
+      <md-item ng-repeat="note in List.notes" ng-include="'views/partials/list-element.html'"></md-item>
     </md-list>
   </section>
   <section>
     <md-subheader class="md-warn">Archived today</md-subheader>
     <md-list layout="column">
-      <md-item ng-repeat="note in archived | today: 'archivedDate'" ng-include="'views/partials/list-element.html'"></md-item>
+      <md-item ng-repeat="note in List.archived | today: 'archivedDate'" ng-include="'views/partials/list-element.html'"></md-item>
     </md-list>
   </section>
   <section>
     <md-subheader class="md-warn">Archived yesterday</md-subheader>
     <md-list layout="column">
-      <md-item ng-repeat="note in archived | yesterday: 'archivedDate'" ng-include="'views/partials/list-element.html'"></md-item>
+      <md-item ng-repeat="note in List.archived | yesterday: 'archivedDate'" ng-include="'views/partials/list-element.html'"></md-item>
     </md-list>
   </section>
   <section>
     <md-subheader class="md-warn">Archived earlier</md-subheader>
     <md-list layout="column">
-      <md-item ng-repeat="note in archived | earlier: 'archivedDate'" ng-include="'views/partials/list-element.html'"></md-item>
+      <md-item ng-repeat="note in List.archived | earlier: 'archivedDate'" ng-include="'views/partials/list-element.html'"></md-item>
     </md-list>
   </section>
 </div>
