Use `controller as` in dialog
part of #62

--- a/app/views/authors.html
+++ b/app/views/authors.html
@@ -21,7 +21,7 @@
 
 
   <div class="md-actions" layout="row">
-    <md-button ng-click="hide()" class="md-primary">
+    <md-button ng-click="Authors.hide()" class="md-primary">
       Hide
     </md-button>
   </div>
