--- a/app/views/archived-all-toast.html
+++ b/app/views/archived-all-toast.html
@@ -1,3 +1,3 @@
 <md-toast>
-  Notes archived, <md-button ng-click="undo()">undo?</md-button>
+  Notes archived, <md-button ng-click="ArchivedAllToast.undo()">undo?</md-button>
 </md-toast>
