--- a/app/views/removed-toast.html
+++ b/app/views/removed-toast.html
@@ -1,3 +1,3 @@
 <md-toast>
-  Note removed, <md-button ng-click="restore()">restore?</md-button>
+  Note removed, <md-button ng-click="RemovedToast.restore()">restore?</md-button>
 </md-toast>
